--- a/public/index.html
+++ b/public/index.html
@@ -5,39 +5,59 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Mansi's Portfolio</title>
+    <!-- Primary Meta Tags -->
+    <title>Mansi Maini</title>
+    <meta name="title" content="Mansi Maini | Network Engineer at Arista | Portfolio" />
+    <meta name="description" content="Welcome to the portfolio of Mansi Maini, a skilled Network Engineer at Arista. Explore her technical expertise, career achievements, and projects in the field of networking." />
+    <meta name="keywords" content="Mansi Maini, Network Engineer, Arista, Networking Portfolio, Arista Networks, Engineer Portfolio, Network Specialist, Routing and Switching, CVP, VXLAN, BGP, Arista Careers" />
+    <meta name="author" content="Mansi Maini" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-portfolio-url.com" />
+    <meta property="og:title" content="Mansi Maini | Network Engineer at Arista | Portfolio" />
+    <meta property="og:description" content="Explore the professional journey and projects of Mansi Maini, an experienced Network Engineer at Arista Networks." />
+    <meta property="og:image" content="https://your-portfolio-url.com/preview-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://your-portfolio-url.com" />
+    <meta property="twitter:title" content="Mansi Maini | Network Engineer at Arista | Portfolio" />
+    <meta property="twitter:description" content="Explore the professional portfolio of Mansi Maini, showcasing her skills, certifications, and achievements in networking." />
+    <meta property="twitter:image" content="https://your-portfolio-url.com/preview-image.jpg" />
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://your-portfolio-url.com" />
+
+    <!-- Schema.org for Google -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Mansi Maini",
+        "jobTitle": "Network Engineer",
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Arista Networks"
+        },
+        "url": "https://your-portfolio-url.com",
+        "sameAs": [
+          "https://linkedin.com/in/mansimaini",
+          "https://github.com/yourgithub",
+          "https://twitter.com/yourtwitter"
+        ]
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
