--- a/public/index.html
+++ b/public/index.html
@@ -16,17 +16,17 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://your-portfolio-url.com" />
+    <meta property="og:url" content="https://portfolio-mansi-delta.vercel.app/" />
     <meta property="og:title" content="Mansi Maini | Network Engineer at Arista | Portfolio" />
     <meta property="og:description" content="Explore the professional journey and projects of Mansi Maini, an experienced Network Engineer at Arista Networks." />
-    <meta property="og:image" content="https://your-portfolio-url.com/preview-image.jpg" />
+    <meta property="og:image" content="https://portfolio-mansi-delta.vercel.app//preview-image.jpg" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://your-portfolio-url.com" />
+    <meta property="twitter:url" content="https://portfolio-mansi-delta.vercel.app/" />
     <meta property="twitter:title" content="Mansi Maini | Network Engineer at Arista | Portfolio" />
     <meta property="twitter:description" content="Explore the professional portfolio of Mansi Maini, showcasing her skills, certifications, and achievements in networking." />
-    <meta property="twitter:image" content="https://your-portfolio-url.com/preview-image.jpg" />
+    <meta property="twitter:image" content="https://portfolio-mansi-delta.vercel.app//preview-image.jpg" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -34,7 +34,7 @@
 <link rel="manifest" href="/site.webmanifest">
 
     <!-- Canonical URL -->
-    <link rel="canonical" href="https://your-portfolio-url.com" />
+    <link rel="canonical" href="https://portfolio-mansi-delta.vercel.app/" />
 
     <!-- Schema.org for Google -->
     <script type="application/ld+json">
@@ -47,11 +47,10 @@
           "@type": "Organization",
           "name": "Arista Networks"
         },
-        "url": "https://your-portfolio-url.com",
+        "url": "https://portfolio-mansi-delta.vercel.app/",
         "sameAs": [
-          "https://linkedin.com/in/mansimaini",
-          "https://github.com/yourgithub",
-          "https://twitter.com/yourtwitter"
+          "https://www.linkedin.com/in/mansimaini/",
+          "https://github.com/mansimaini2207"
         ]
       }
     </script>
